<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_smart_views"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_next_7_days"
            android:icon="@drawable/ic_week"
            android:title="@string/nav_next_7_days" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/nav_inbox" />
    </group>

    <item android:title="@string/nav_lists">
        <menu>
            <group android:id="@+id/group_lists"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_work"
                    android:icon="@drawable/ic_work"
                    android:title="@string/cat_work" />
                <item
                    android:id="@+id/nav_study"
                    android:icon="@drawable/ic_study"
                    android:title="@string/cat_study" />
                <item
                    android:id="@+id/nav_travel"
                    android:icon="@drawable/ic_travel"
                    android:title="@string/cat_travel" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_filters">
        <menu>
            <group android:id="@+id/group_filters"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_this_week"
                    android:icon="@drawable/ic_filter"
                    android:title="@string/filter_this_week" />
                <item
                    android:id="@+id/nav_unscheduled"
                    android:icon="@drawable/ic_filter"
                    android:title="@string/filter_unscheduled" />
                <item
                    android:id="@+id/nav_completed"
                    android:icon="@drawable/ic_completed"
                    android:title="@string/filter_completed" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_tools">
        <menu>
            <group android:id="@+id/group_tools"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_calendar"
                    android:icon="@drawable/ic_calendar"
                    android:title="@string/nav_calendar" />
                <item
                    android:id="@+id/nav_countdown"
                    android:icon="@drawable/ic_timer"
                    android:title="@string/nav_countdown" />
            </group>
        </menu>
    </item>
</menu>
